agregue header y nav

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <header> <p>Hola Mundo</p></header>
+  <nav>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </nav>
 </body>
 </html>
