usando git reset --mixed, borre 2 cambios, hice restore de app.js y tenia cambios desde 2 commis adelante que se vinieron con mixed

--- a/index.html
+++ b/index.html
@@ -14,5 +14,14 @@
     <li></li>
     <li></li>
   </nav>
+  <aside>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate deserunt deleniti modi 
+    dicta ullam similique, asperiores eum incidunt, sapiente aut impedit dolore commodi neque itaque 
+    iusto repudiandae nostrum corporis. Dignissimos?</p>
+  </aside>
+  <footer>
+    <p>TODOS LOS DERECHOS RESERVADOS</p>
+    <p>2024</p>
+  </footer>
 </body>
 </html>
