--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <li></li>
     <li></li>
   </nav>
+  <div>
+    <div></div>
+    <div></div>
+  </div>
+  <div>
+    
+  </div>
   <aside>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate deserunt deleniti modi 
     dicta ullam similique, asperiores eum incidunt, sapiente aut impedit dolore commodi neque itaque 
