practique el reset mixed y confirme que se trae cambios

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 <body>
   <header> <p>Hola Mundo</p></header>
   <nav>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li><a href=""></a></li>
+    <li><a href=""></a></li>
+    <li><a href=""></a></li>
+    <li><a href=""></a></li>
+    <li><a href=""></a></li>
   </nav>
-  <div>
-    <div></div>
-    <div></div>
+  <div class="containerImagenes">
+    <div id="mordedores"></div>
+    <div id="mordedores"></div>
   </div>
-  <div>
-    
+  <div class="containerImagenes">
+
   </div>
   <aside>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate deserunt deleniti modi 
