--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
   </div>
   <div class="containerImagenes">
 
+  <article>
+    <div></div>
+    <div></div>
+  </article>
+
   </div>
   <aside>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate deserunt deleniti modi 
