Confirmo que con git reset --mixed se trae cambios commiteados, en stated o no, desde donde sea que lo haces.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="estilos.css">
   <title>Document</title>
 </head>
 <body>
@@ -21,19 +22,27 @@
   <div class="containerImagenes">
 
   <article>
-    <div></div>
-    <div></div>
+    <div><p> soy ingeniera</p></div>
+    <div><p>trabajo en ingenieria s.a</p></div>
   </article>
 
   </div>
+
+  <div>
+    <article><p>No he comiteado agregado esto</p></article>
+  </div>
+
   <aside>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate deserunt deleniti modi 
     dicta ullam similique, asperiores eum incidunt, sapiente aut impedit dolore commodi neque itaque 
     iusto repudiandae nostrum corporis. Dignissimos?</p>
   </aside>
+
   <footer>
     <p>TODOS LOS DERECHOS RESERVADOS</p>
     <p>2024</p>
   </footer>
+
+  <script src="app.js"></script>
 </body>
 </html>
